--- a/src/package.json
+++ b/src/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.267.0",
     "@aws-sdk/client-s3": "^3.276.0",
-    "@aws-sdk/util-dynamodb": "^3.267.0"
+    "@aws-sdk/util-dynamodb": "^3.267.0",
+    "csv-parser": "^3.0.0"
   }
 }
