--- a/src/package.json
+++ b/src/package.json
@@ -6,6 +6,7 @@
     "@aws-sdk/client-dynamodb": "^3.267.0",
     "@aws-sdk/client-s3": "^3.276.0",
     "@aws-sdk/util-dynamodb": "^3.267.0",
+    "bluebird": "^3.7.2",
     "csv-parser": "^3.0.0"
   }
 }
